--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -19,3 +19,7 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.spangrid:last-child {
+  grid-column: 1 / -1;
+}
